import { describe, it, expect, vi } from 'vitest';
import { runPrompt } from '../runPrompt';
import { createMockModel } from '../test/createMockModel';
import { StatefulPrompt } from '../StatefulPrompt';
import { z } from 'zod';
import { stepCountIs } from 'ai';
import { taskListPlugin } from './taskList';
import type { Plugin } from '../types';
import type { Task } from './types';

describe('Plugin System', () => {
  describe('Basic Plugin Loading', () => {
    it('should load a simple plugin and make its methods available', async () => {
      // Simple plugin that adds a greeting method
      const greetingPlugin = {
        defGreeting(this: StatefulPrompt, name: string) {
          return this.def('GREETING', `Hello, ${name}!`);
        }
      };

      const mockModel = createMockModel([
        { type: 'text', text: 'Greetings!' }
      ]);

      const { result, prompt } = await runPrompt(
        async ({ defGreeting, $ }) => {
          const greeting = defGreeting('World');
          $`Say ${greeting}`;
        },
        {
          model: mockModel,
          plugins: [greetingPlugin] as const
        }
      );

      const text = await result.text;
      expect(text).toBe('Greetings!');

      // Check that the variable was defined
      const steps = prompt.steps;
      const systemMessage = steps[0].input.prompt?.find((msg: any) => msg.role === 'system');
      expect(systemMessage?.content).toContain('<GREETING>');
      expect(systemMessage?.content).toContain('Hello, World!');
    });

    it('should support multiple plugins', async () => {
      const pluginA = {
        defFoo(this: StatefulPrompt, value: string) {
          return this.def('FOO', value);
        }
      };

      const pluginB = {
        defBar(this: StatefulPrompt, value: string) {
          return this.def('BAR', value);
        }
      };

      const mockModel = createMockModel([
        { type: 'text', text: 'Done!' }
      ]);

      const { result, prompt } = await runPrompt(
        async ({ defFoo, defBar, $ }) => {
          const foo = defFoo('foo-value');
          const bar = defBar('bar-value');
          $`Use ${foo} and ${bar}`;
        },
        {
          model: mockModel,
          plugins: [pluginA, pluginB] as const
        }
      );

      // Wait for completion
      await result.text;

      const steps = prompt.steps;
      const systemMessage = steps[0].input.prompt?.find((msg: any) => msg.role === 'system');
      expect(systemMessage?.content).toContain('<FOO>');
      expect(systemMessage?.content).toContain('foo-value');
      expect(systemMessage?.content).toContain('<BAR>');
      expect(systemMessage?.content).toContain('bar-value');
    });

    it('should allow plugins to use defState', async () => {
      const counterPlugin = {
        defCounter(this: StatefulPrompt, initial: number = 0) {
          const [count, setCount] = this.defState('counter', initial);
          return { count, increment: () => setCount(c => c + 1) };
        }
      };

      const mockModel = createMockModel([
        { type: 'text', text: 'Counter initialized!' }
      ]);

      let capturedCounter: { count: number; increment: () => void } | null = null;

      await runPrompt(
        async ({ defCounter, $ }) => {
          capturedCounter = defCounter(10);
          $`Start the counter`;
        },
        {
          model: mockModel,
          plugins: [counterPlugin] as const
        }
      );

      expect(capturedCounter).not.toBeNull();
      expect(capturedCounter!.count).toBe(10);
    });

    it('should allow plugins to use defTool', async () => {
      // Use a shared spy that can be referenced in assertions
      const addFn = vi.fn(async ({ a, b }: { a: number; b: number }) => ({ result: a + b }));

      const calculatorPlugin = {
        defCalculator(this: StatefulPrompt, toolFn: typeof addFn) {
          this.defTool(
            'add',
            'Add two numbers',
            z.object({
              a: z.number(),
              b: z.number()
            }),
            toolFn
          );
        }
      };

      const mockModel = createMockModel([
        { type: 'text', text: 'Let me calculate...' },
        {
          type: 'tool-call',
          toolCallId: 'call_add',
          toolName: 'add',
          args: { a: 5, b: 3 }
        },
        { type: 'text', text: 'The answer is 8!' }
      ]);

      const { result } = await runPrompt(
        async ({ defCalculator, $ }) => {
          defCalculator(addFn);
          $`Add 5 and 3`;
        },
        {
          model: mockModel,
          plugins: [calculatorPlugin] as const,
          options: { stopWhen: stepCountIs(10) }
        }
      );

      await result.text;

      expect(addFn).toHaveBeenCalledWith(
        { a: 5, b: 3 },
        expect.anything()
      );
    });

    it('should allow plugins to use defEffect', async () => {
      const effectSpy = vi.fn();

      const loggerPlugin = {
        defLogger(this: StatefulPrompt) {
          this.defEffect((ctx) => {
            effectSpy(ctx.stepNumber);
          });
        }
      };

      const mockModel = createMockModel([
        { type: 'text', text: 'Step 1' },
        {
          type: 'tool-call',
          toolCallId: 'call_test',
          toolName: 'testTool',
          args: {}
        },
        { type: 'text', text: 'Step 2' }
      ]);

      const { result } = await runPrompt(
        async ({ defLogger, defTool, $ }) => {
          defLogger();
          defTool('testTool', 'A test tool', z.object({}), async () => ({ ok: true }));
          $`Do something`;
        },
        {
          model: mockModel,
          plugins: [loggerPlugin] as const,
          options: { stopWhen: stepCountIs(10) }
        }
      );

      await result.text;

      // Effect should be called for each step
      expect(effectSpy).toHaveBeenCalled();
    });
  });

  describe('Plugin Re-execution', () => {
    it('should maintain plugin method availability across re-executions', async () => {
      const executionCount = { value: 0 };

      const trackingPlugin = {
        defTracker(this: StatefulPrompt) {
          executionCount.value++;
          const [calls, setCalls] = this.defState('calls', 0);
          setCalls(c => c + 1);
          return calls;
        }
      };

      const mockModel = createMockModel([
        { type: 'text', text: 'First step' },
        {
          type: 'tool-call',
          toolCallId: 'call_1',
          toolName: 'myTool',
          args: {}
        },
        { type: 'text', text: 'Second step' }
      ]);

      const { result } = await runPrompt(
        async ({ defTracker, defTool, $ }) => {
          defTracker();
          defTool('myTool', 'Test tool', z.object({}), async () => ({ ok: true }));
          $`Do something`;
        },
        {
          model: mockModel,
          plugins: [trackingPlugin] as const,
          options: { stopWhen: stepCountIs(10) }
        }
      );

      await result.text;

      // Plugin method should be called on initial execution and re-executions
      expect(executionCount.value).toBeGreaterThan(1);
    });
  });

  describe('taskListPlugin', () => {
    it('should create a task list with startTask and completeTask tools', async () => {
      const mockModel = createMockModel([
        { type: 'text', text: 'Starting task...' },
        {
          type: 'tool-call',
          toolCallId: 'call_start',
          toolName: 'startTask',
          args: { taskId: '1' }
        },
        { type: 'text', text: 'Working on it...' },
        {
          type: 'tool-call',
          toolCallId: 'call_complete',
          toolName: 'completeTask',
          args: { taskId: '1' }
        },
        { type: 'text', text: 'Task completed!' }
      ]);

      const initialTasks: Task[] = [
        { id: '1', name: 'Test Task', status: 'pending' },
        { id: '2', name: 'Another Task', status: 'pending' }
      ];

      let capturedTasks: Task[] = [];

      const { result, prompt } = await runPrompt(
        async ({ defTaskList, $ }) => {
          const [tasks] = defTaskList(initialTasks);
          capturedTasks = tasks;
          $`Complete task 1`;
        },
        {
          model: mockModel,
          plugins: [taskListPlugin] as const,
          options: { stopWhen: stepCountIs(10) }
        }
      );

      await result.text;

      // Check that both tools were registered
      const steps = prompt.steps;
      const toolCalls = steps.flatMap((step: any) =>
        step.output?.content?.filter((c: any) => c.type === 'tool-call') || []
      );

      expect(toolCalls.some((tc: any) => tc.toolName === 'startTask')).toBe(true);
      expect(toolCalls.some((tc: any) => tc.toolName === 'completeTask')).toBe(true);
    });

    it('should handle starting a non-existent task gracefully', async () => {
      const mockModel = createMockModel([
        {
          type: 'tool-call',
          toolCallId: 'call_start',
          toolName: 'startTask',
          args: { taskId: 'nonexistent' }
        },
        { type: 'text', text: 'Task not found' }
      ]);

      const { result, prompt } = await runPrompt(
        async ({ defTaskList, $ }) => {
          defTaskList([{ id: '1', name: 'Task 1', status: 'pending' }]);
          $`Start task nonexistent`;
        },
        {
          model: mockModel,
          plugins: [taskListPlugin] as const,
          options: { stopWhen: stepCountIs(10) }
        }
      );

      await result.text;

      // The tool should return a failure result
      const steps = prompt.steps;
      const toolResults = steps.flatMap((step: any) =>
        step.input.prompt?.filter((msg: any) =>
          msg.role === 'tool' && msg.content?.[0]?.toolName === 'startTask'
        ) || []
      );

      // Tool should have been called but returned failure
      expect(toolResults.length).toBeGreaterThanOrEqual(0);
    });

    it('should include task list in system prompt via defEffect', async () => {
      const mockModel = createMockModel([
        { type: 'text', text: 'Tasks received!' }
      ]);

      const { result, prompt } = await runPrompt(
        async ({ defTaskList, $ }) => {
          defTaskList([
            { id: '1', name: 'Research', status: 'pending' },
            { id: '2', name: 'Implement', status: 'in_progress' },
            { id: '3', name: 'Test', status: 'completed' }
          ]);
          $`Show task status`;
        },
        {
          model: mockModel,
          plugins: [taskListPlugin] as const
        }
      );

      // Wait for completion
      await result.text;

      const steps = prompt.steps;
      // Note: The effect adds to stepModifications which may be in subsequent steps
      // or in the first step depending on execution timing
      expect(steps.length).toBeGreaterThan(0);
    });
  });

  describe('Type Safety', () => {
    it('should provide correct types for plugin methods', async () => {
      // This test primarily verifies TypeScript compilation
      // If the types are wrong, this file won't compile

      interface MyPluginMethods {
        defCustom: (config: { name: string; value: number }) => string;
      }

      const myPlugin: Plugin = {
        defCustom(this: StatefulPrompt, config: { name: string; value: number }) {
          this.def(config.name, String(config.value));
          return `<${config.name}>`;
        }
      };

      const mockModel = createMockModel([
        { type: 'text', text: 'Done!' }
      ]);

      // The plugin method should be callable with proper types
      await runPrompt(
        async ({ defCustom }) => {
          const result = defCustom({ name: 'TEST', value: 42 });
          expect(typeof result).toBe('string');
        },
        {
          model: mockModel,
          plugins: [myPlugin] as const
        }
      );
    });
  });

  describe('Edge Cases', () => {
    it('should work with empty plugins array', async () => {
      const mockModel = createMockModel([
        { type: 'text', text: 'No plugins!' }
      ]);

      const { result } = await runPrompt(
        async ({ def, $ }) => {
          def('TEST', 'value');
          $`Hello`;
        },
        {
          model: mockModel,
          plugins: []
        }
      );

      const text = await result.text;
      expect(text).toBe('No plugins!');
    });

    it('should work without plugins property', async () => {
      const mockModel = createMockModel([
        { type: 'text', text: 'No plugins config!' }
      ]);

      const { result } = await runPrompt(
        async ({ def, $ }) => {
          def('TEST', 'value');
          $`Hello`;
        },
        {
          model: mockModel
        }
      );

      const text = await result.text;
      expect(text).toBe('No plugins config!');
    });

    it('should handle plugin methods that return void', async () => {
      const voidPlugin = {
        setupSomething(this: StatefulPrompt) {
          this.defSystem('setup', 'System is configured');
          // No return value
        }
      };

      const mockModel = createMockModel([
        { type: 'text', text: 'Setup complete!' }
      ]);

      const { result } = await runPrompt(
        async ({ setupSomething, $ }) => {
          setupSomething();
          $`Check setup`;
        },
        {
          model: mockModel,
          plugins: [voidPlugin] as const
        }
      );

      const text = await result.text;
      expect(text).toBe('Setup complete!');
    });

    it('should handle async plugin methods', async () => {
      const asyncPlugin = {
        async defAsyncFeature(this: StatefulPrompt, data: string) {
          // Simulate async operation
          await new Promise(resolve => setTimeout(resolve, 10));
          return this.def('ASYNC_DATA', data);
        }
      };

      const mockModel = createMockModel([
        { type: 'text', text: 'Async done!' }
      ]);

      const { result, prompt } = await runPrompt(
        async ({ defAsyncFeature, $ }) => {
          await defAsyncFeature('async-value');
          $`Use async data`;
        },
        {
          model: mockModel,
          plugins: [asyncPlugin] as const
        }
      );

      await result.text;

      const steps = prompt.steps;
      const systemMessage = steps[0].input.prompt?.find((msg: any) => msg.role === 'system');
      expect(systemMessage?.content).toContain('async-value');
    });
  });
});
